syntax = "proto3";

option go_package = ".;mrouteguide";
option java_multiple_files = true;
option java_package = "team.wesionary.dipeshdulal.routeguide";
option java_outer_classname = "RouteGuideProto";

package routeguide;

service RouteGuide {
    // Simple request response
    rpc GetFeature(Point) returns (Feature) {}

    // SERVER SIDE STREAMING
    // Client sends request and gets handle of stream.
    // Client reads the returned streams until there are no more.
    rpc ListFeatures(Rectangle) returns (stream Feature){}

    // CLIENT_SIDE_STREAMING
    // Client sends stream to server and server returns response
    // after stream is finished.
    rpc RecordRoute(stream Point) returns (RouteSummary) {}

    // BIDIRECTIONAL_STREAMING
    rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message Point {
    int32 latitude = 1;
    int32 longitude = 2;
}

message Rectangle {
    Point lo = 1;
    Point hi = 2;
}

message Feature {
    string name = 1;
    Point location = 2;
}

message RouteNote {
    Point location = 1;
    string message = 2;
}

message RouteSummary {
    int32 point_count = 1;
    int32 feature_count = 2;
    int32 distance = 3;
    int32 elapsed_time = 4;
}
